# time-calculator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
junit/: test-results.xml
src/time_calculator/: calculation.py  formatter.py  main.py  parser.py  time_calculator.py
tests/: calculation_test.py  formatter_test.py  mains_test.py  parser_test.py  time_calculator_test.py
