[tool.poetry]
name = "time-calculator"
version = "0.1.0"
description = "Time Calculator project assignment from freeCodeCamp"
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "time_calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"
black = "^23.12.1"
pycln = "^2.4.0"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.3.3"
black = "^23.3.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
